<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical">

            <androidx.fragment.app.FragmentContainerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/contentFragmentContainer"/>
        </RelativeLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/background"
            >

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/profileButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/profile_button"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/devicesButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/devices_button" />

                <Button
                    android:id="@+id/settingsButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/settings_button" />

                <Button
                    android:id="@+id/logoutButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/logout_button"
                    android:onClick="onClick"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/loginButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/login_button"
                    android:onClick="onClick"/>

            </LinearLayout>

        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </LinearLayout>

</RelativeLayout>